[FIXED] stabilization